# HDU-PHOENIX-socket-demo

./: .gitignore  CMakeLists.txt  README.md
asset/: tf.json
include/: Application.hpp  Info.hpp  Message.hpp  SocketClient.hpp  SocketServer.hpp
src/: Info.cpp  Message.cpp  SocketClient.cpp  SocketServer.cpp  camerainfo_server.cpp  client.cpp  server.cpp  tf.cpp
